@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.5.18 (Release 140)"
+#define KPPPVERSION "1.5.19 (Release 141)"
 #endif
